refactor: Decouple discord bot logic from web api

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 # If APP_ENV is set to local, the app will have hot reload enabled
 APP_ENV=local
+# APP_COMPONENT valid values: api, bot
+APP_COMPONENT=api
 APP_HOST=0.0.0.0
 APP_PORT=10000
 APP_LOG_LEVEL=INFO
