feat: Implement missing auth logic

--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ fastapi = {extras = ["all"], version = "*"}
 "discord.py" = "*"
 aiosu = "*"
 asyncpg = "*"
+fastapi-sessions = "*"
 
 [dev-packages]
 black = "*"
