--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ APP_PORT=10000
 APP_LOG_LEVEL=INFO
 
 FRONTEND_HOST=0.0.0.0
-FRONTEND_PORT=20000
+FRONTEND_PORT=80
 
 READ_DB_SCHEME=postgresql
 READ_DB_HOST=localhost
@@ -36,4 +36,8 @@ DISCORD_VERIFY_CHANNEL_ID=
 
 OSU_CLIENT_ID=
 OSU_CLIENT_SECRET=
-OSU_REDIRECT_URI=http://localhost:3000/auth
+OSU_REDIRECT_URI=http://0.0.0.0
+
+SESSION_COOKIE_NAME=cookie
+SESSION_COOKIE_IDENTIFIER=general_verifier
+SESSION_COOKIE_KEY=secret727
