--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
-  "python.formatting.provider": "black",
-  "files.exclude": {
-    ".venv/lib": true,
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.black-formatter",
+        "editor.formatOnSave": true
+    },
+    "files.exclude": {
+      ".venv/lib": true,
+    }
   }
-}
