--- a/.env.example
+++ b/.env.example
@@ -32,7 +32,9 @@ WRITE_DB_MAX_POOL_SIZE=10
 WRITE_DB_USE_SSL=false
 
 DISCORD_BOT_TOKEN=
+DISCORD_GUILD_ID=
 DISCORD_VERIFY_CHANNEL_ID=
+DISCORD_VERIFIED_ROLE_ID=
 
 OSU_CLIENT_ID=
 OSU_CLIENT_SECRET=
