refact: use DOMAIN instead of APP_HOST

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,8 @@ APP_LOG_LEVEL=INFO
 FRONTEND_HOST=0.0.0.0
 FRONTEND_PORT=80
 
+DOMAIN=example.com
+
 READ_DB_SCHEME=postgresql
 READ_DB_HOST=localhost
 READ_DB_PORT=5432
