--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,43 +1,37 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v5.0.0
     hooks:
-    -   id: check-added-large-files
-    -   id: check-ast
-    -   id: check-builtin-literals
-    -   id: check-yaml
-    -   id: debug-statements
-    -   id: end-of-file-fixer
-    -   id: requirements-txt-fixer
-    -   id: trailing-whitespace
--   repo: https://github.com/psf/black
-    rev: 23.3.0
+      - id: check-added-large-files
+      - id: check-ast
+      - id: check-builtin-literals
+      - id: check-yaml
+      - id: debug-statements
+      - id: end-of-file-fixer
+      - id: trailing-whitespace
+  - repo: https://github.com/psf/black
+    rev: 25.1.0
     hooks:
-    -   id: black
--   repo: https://github.com/asottile/pyupgrade
-    rev: v3.3.1
+      - id: black
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v3.19.1
     hooks:
-    -   id: pyupgrade
-        args: [--py37-plus, --keep-runtime-typing]
--   repo: https://github.com/asottile/reorder_python_imports
-    rev: v3.9.0
+      - id: pyupgrade
+        args: [--py313-plus, --keep-runtime-typing]
+  - repo: https://github.com/pycqa/isort
+    rev: 6.0.1
     hooks:
-    -   id: reorder-python-imports
-        args: [--py37-plus, --add-import, 'from __future__ import annotations']
--   repo: https://github.com/asottile/add-trailing-comma
-    rev: v2.4.0
+      - id: isort
+  - repo: https://github.com/asottile/add-trailing-comma
+    rev: v3.1.0
     hooks:
-    -   id: add-trailing-comma
--   repo: https://github.com/asottile/blacken-docs
-    rev: 1.13.0
+      - id: add-trailing-comma
+  - repo: https://github.com/asottile/blacken-docs
+    rev: 1.19.1
     hooks:
-    -   id: blacken-docs
--   repo: https://github.com/hadialqattan/pycln
-    rev: v2.1.3
-    hooks:
-    -   id: pycln
+      - id: blacken-docs
 
 default_language_version:
-    python: python3.11
+  python: python3.13
